// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maskBorder renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask-border: 0;
  mask-border: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: 0;
  mask-border: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: 0;
  mask-border: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: 0;
  mask-border: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorder renders function 1`] = `
Array [
  .c0 {
  -webkit-mask-border: hasnot;
  mask-border: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: has;
  mask-border: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: hasnot;
  mask-border: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: has;
  mask-border: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorder renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-border: invalid.path.1;
  mask-border: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: invalid.path.1;
  mask-border: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: invalid.path.1;
  mask-border: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: invalid.path.1;
  mask-border: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorder renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask-border: -54881;
  mask-border: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: -54881;
  mask-border: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: -42365;
  mask-border: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: -42365;
  mask-border: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorder renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: July;
    mask-border: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: August;
    mask-border: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: September;
    mask-border: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border: November;
    mask-border: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: July;
    mask-border: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: August;
    mask-border: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: September;
    mask-border: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border: November;
    mask-border: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: May;
    mask-border: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: June;
    mask-border: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: April;
    mask-border: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border: November;
    mask-border: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: May;
    mask-border: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: June;
    mask-border: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-border: April;
    mask-border: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-border: November;
    mask-border: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorder renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask-border: July;
    mask-border: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-border: August;
    mask-border: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-border: September;
    mask-border: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-border: November;
    mask-border: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-border: August;
    mask-border: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask-border: July;
    mask-border: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-border: August;
    mask-border: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-border: September;
    mask-border: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-border: November;
    mask-border: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-border: August;
    mask-border: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-border: January;
    mask-border: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-border: December;
    mask-border: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-border: April;
    mask-border: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-border: May;
    mask-border: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-border: June;
    mask-border: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-border: January;
    mask-border: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-border: December;
    mask-border: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-border: April;
    mask-border: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-border: May;
    mask-border: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-border: June;
    mask-border: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorder renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask-border: 54881;
  mask-border: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: 54881;
  mask-border: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: 42365;
  mask-border: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: 42365;
  mask-border: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorder renders string 1`] = `
Array [
  .c0 {
  -webkit-mask-border: July;
  mask-border: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: July;
  mask-border: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: June;
  mask-border: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: June;
  mask-border: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBorder renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-border: DarkSlateBlue;
  mask-border: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: DarkSlateBlue;
  mask-border: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: DarkSlateBlue;
  mask-border: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-border: DarkSlateBlue;
  mask-border: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
